<resources>
    <string name="app_name">Weather App</string>

    <string name="temperature_format">%1$s°</string>
    <string name="weather_icon_url_format">http://openweathermap.org/img/w/%1$s.png</string>
    <string name="wind_format">%1$s meter/sec, %2$s°</string>
    <string name="humidity_format">%1$s percent</string>
    <string name="pressure_format">%1$s hPa</string>
    <string name="clouds_format">%1$s percent</string>

    <string name="blank_temperature">-°</string>
    <string name="invalid_location">Unknown location</string>
    <string name="empty_label">-</string>
    <string name="weather_icon">Weather icon</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="atmospheric_pressure">Atmospheric Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="minimum_temperature">Min. Temperature</string>
    <string name="maximum_temperature">Max. Temperature</string>
    <string name="weather_details">Weather Details</string>
    <string name="dev_variant">Dev Variant</string>
    <string name="app_icon">App icon</string>
    <string name="test_variant">Test Variant</string>
    <string name="production_variant">Production Variant</string>
    <string name="refresh_message">Refreshing…</string>
    <string name="weather_details_updated">Weather details updated</string>
    <string name="current_location_not_available">Current location: Not available</string>

    <string name="current_location_format">Current location: %1$S, %2$S</string>
    <string name="permission_not_granted">Location permission was not granted. Current location will not be retrieved.</string>
    <string name="label_ok">OK</string>
</resources>
