<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_item_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/card_margin_horizontal_big_activity"
    android:layout_marginStart="@dimen/card_margin_horizontal_big_activity"
    android:layout_marginBottom="@dimen/card_margin_vertical_big_activity"
    android:layout_marginTop="@dimen/card_margin_vertical_big_activity"
    android:background="@android:color/white"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
    card_view:cardElevation="@dimen/card_recycler_elevation">

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/tvLocationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/invalid_location"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/empty_label"
        android:textSize="@dimen/text_size_regular"
        android:textColor="@color/teal_900"
        app:layout_constraintTop_toBottomOf="@id/tvLocationName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/blank_temperature"
        android:textSize="@dimen/text_size_large" />

</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>